--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <div v-show="vidas === 0"  class="game-over">
-      <h1 class="nes-text is-error">SE FODEU!</h1>
+      <h1 class="nes-text is-error">Game Over!</h1>
       <button v-on:click="jogarNovamente()" class="nes-btn is-success">Try Again</button>
     </div>
   
